fixed repeated declaration and color contrast

--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -116,7 +116,6 @@ h3 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  filter: brightness(80%);
   width: 100%;
   height: 80vh;
   display: flex;
@@ -129,6 +128,8 @@ h3 {
 h1 {
   font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
   font-family: var(--header-font);
+  color: #f8f9fa;
+  font-weight: 100;
 }
 .heroContainer a {
   color: var(--text-color);
@@ -153,6 +154,7 @@ h1 {
 h2 {
   color: var(--primary-color);
   font-family: var(--header-font);
+  font-weight: 100;
 }
 .main section p {
   color: #555;
@@ -167,6 +169,7 @@ h3 {
   font-family: var(--header-font);
   margin-bottom: 1rem;
   color: var(--primary-color);
+  font-weight: 100;
 }
 #placesContainer > div {
   background: white;
@@ -217,7 +220,6 @@ h3 {
 }
 figure {
   grid-area: image;
-  margin: 0;
   text-align: center;
   margin: 0 auto;
 }
